--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@ backend
 
 
 frontend
-- fix "cards.map not a function" error
+- fix hydration error
 - filter by playedCards in CardsApp
 - layout cards in a proper grid (flexbox?)
 ---
